kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: checkout-api
  labels:
    app.kubernetes.io/name: checkout-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: checkout-api
  ports:
    - name: http
      port: 80
      targetPort: http
